deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goavatar-server
  namespace: goavatar
spec:
  type: ClusterIP
  selector:
    app: goavatar-server
  ports:
    - port: 80
      targetPort: 8080
